--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/Ore's Bukka.png" alt="logo"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/Ore's Bukka.png" alt="logo"></a>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
             <button class="btn btn-outline-dark" type="submit">Search</button>
