--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <!--content section-->
 <div class="content">
-  <h1>Orẹ's Bukka</h1>
+  <h1>Ore's Bukka</h1>
   <p>A place where food, flavour, and sensory experience come together to create a memorable experience...</p>
   <!--button-->.
   <div class="menu">
